--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
             <img src="img/09.jpg" alt="Норріс і Сайнс 2019" width="800">
           </div>
         </div>
+      </div>  
     </main>
     <footer></footer>
   </body>
